--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="./css/style.css"/>
 </head>
 <body> 
-         <!--Navigation-->
+        <!--Navigation-->
         <header class="header">
             <div class="container container-nav">
                     <ul class="nav-list list">
@@ -24,10 +24,18 @@
                         <li class="nav-item"><a href="" class="nav-link">Контакты</a></li>
                     </ul>
                     <ul class="contacts-list list">
-                        <li class="contacts-item"><a href="mailto:info@devstudio.com" class="contacts-link">info@example.com</a>
+                        <li class="contacts-item">
+                            <svg class="contacts-icon" width="16" height="10">
+                                <use href="./images/icons.svg#icon-envelope"></use>
+                            </svg>
+                            <a href="mailto:info@devstudio.com" class="contacts-link">info@example.com</a>
                         <li>
-                        <li class="contacts-item"><a href="tel:+380991111111" class="contacts-link">+380991111111</a>
-                        </li>
+                        <li class="contacts-item">
+                            <svg class="contacts-icon" width="10" height="16">
+                                <use href="./images/icons.svg#icon-smartphone"></use>
+                            </svg>
+                                <a href="tel:+380991111111" class="contacts-link">+380991111111</a>
+                        </li> 
                     </ul>
             </div>
         </header>
@@ -41,26 +49,44 @@
         <!--Description-->
         <section class="description">
             <div class="container container-description">
-            <h2 class="visually-hidden">Наши приоритеты</h2>
-            <ul class="description-list list">
-                <li class="description-item">
-                    <h3 class="description-title">ВНИМАНИЕ К ДЕТАЛЯМ</h3>
-                    <p class="description-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
-                </li>
-                <li class="description-item">
-                    <h3 class="description-title">ПУНКТУАЛЬНОСТЬ</h3>
-                    <p class="description-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
-                </li>
-                <li class="description-item">
-                    <h3 class="description-title">ПЛАНИРОВАНИЕ</h3>
-                    <p class="description-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
-                </li>
-                <li class="description-item">
-                    <h3 class="description-title">СОВРЕМЕННЫЕ ТЕХНОЛОГИИ</h3>
-                    <p class="description-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
-                </li>
-            </ul>
-            </div></section>
+                <h2 class="visually-hidden">Наши приоритеты</h2>
+                <ul class="description-list list">
+                    <li class="description-item">
+                    <div class="button-client">
+                            <svg class="description-icon" width="70" hight="70">
+                                <use href="./images/icons.svg#icon-antenna"></use>
+                            </svg>
+                    </div>
+                        <h3 class="description-title">ВНИМАНИЕ К ДЕТАЛЯМ</h3>
+                        <p class="description-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                    </li>
+                    <li class="description-item">
+                        <div class="button-client">
+                        <svg class="description-icon" width="70" hight="70">
+                            <use href="./images/icons.svg#icon-clock"></use>
+                        </svg></div>
+                        <h3 class="description-title">ПУНКТУАЛЬНОСТЬ</h3>
+                        <p class="description-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                    </li>
+                    <li class="description-item">
+                        <div class="button-client">
+                        <svg class="description-icon" width="70" hight="70">
+                            <use href="./images/icons.svg#icon-diagram"></use>
+                        </svg></div>
+                        <h3 class="description-title">ПЛАНИРОВАНИЕ</h3>
+                        <p class="description-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                    </li>
+                    <li class="description-item">
+                        <div class="button-client">
+                        <svg class="description-icon" width="70" hight="70">
+                            <use href="./images/icons.svg#icon-astronaut"></use>
+                        </svg></div>
+                        <h3 class="description-title">СОВРЕМЕННЫЕ ТЕХНОЛОГИИ</h3>
+                        <p class="description-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                    </li>
+                </ul>
+            </div>
+        </section>
         <!--About us-->
             <section class=" container-about-us">
                 <div class="container">
@@ -115,16 +141,29 @@
                             <p class="team-text"><span lang="en">Frontend Developer</span></p>
                             <ul class="team-social-list list">
                                 <li class="team-social-item">
-                                    <a href="" class="team-social-link"></a>
+                                    <a href="" class="team-social-link">
+                                        <svg class="team-social-icon" width="20" hight="20">
+                                            <use href="./images/icons.svg#icon-instagram"></use>
+                                        </svg>
+                                    </a>
                                 </li>
                                 <li class="team-social-item">
-                                    <a href="" class="team-social-link"></a>
+                                    <a href="" class="team-social-link"><svg class="team-social-icon" width="20" hight="20">
+                                            <use href="./images/icons.svg#icon-twitter"></use>
+                                        </svg>
+                                    </a>
                                 </li>
                                 <li class="team-social-item">
-                                    <a href="" class="team-social-link"></a>
+                                    <a href="" class="team-social-link"><svg class="team-social-icon" width="20" hight="20">
+                                            <use href="./images/icons.svg#icon-facebook"></use>
+                                        </svg>
+                                    </a>
                                 </li>
                                 <li class="team-social-item">
-                                    <a href="" class="team-social-link"></a>
+                                    <a href="" class="team-social-link"><svg class="team-social-icon" width="20" hight="20">
+                                            <use href="./images/icons.svg#icon-linkedin"></use>
+                                        </svg>
+                                    </a>
                                 </li>
                             </ul>
                         </li>
@@ -134,16 +173,29 @@
                             <p class="team-text"><span lang="en">Marketing</span></p>
                             <ul class="team-social-list list">
                                 <li class="team-social-item">
-                                    <a href="" class="team-social-link"></a>
+                                    <a href="" class="team-social-link">
+                                        <svg class="team-social-icon" width="20" hight="20">
+                                            <use href="./images/icons.svg#icon-instagram"></use>
+                                        </svg>
+                                    </a>
                                 </li>
                                 <li class="team-social-item">
-                                    <a href="" class="team-social-link"></a>
+                                    <a href="" class="team-social-link"><svg class="team-social-icon" width="20" hight="20">
+                                            <use href="./images/icons.svg#icon-twitter"></use>
+                                        </svg>
+                                    </a>
                                 </li>
                                 <li class="team-social-item">
-                                    <a href="" class="team-social-link"></a>
+                                    <a href="" class="team-social-link"><svg class="team-social-icon" width="20" hight="20">
+                                            <use href="./images/icons.svg#icon-facebook"></use>
+                                        </svg>
+                                    </a>
                                 </li>
                                 <li class="team-social-item">
-                                    <a href="" class="team-social-link"></a>
+                                    <a href="" class="team-social-link"><svg class="team-social-icon" width="20" hight="20">
+                                            <use href="./images/icons.svg#icon-linkedin"></use>
+                                        </svg>
+                                    </a>
                                 </li>
                             </ul>
                         </li>
@@ -153,19 +205,82 @@
                             <p class="team-text"><span lang="en">UI Designer</span></p>
                             <ul class="team-social-list list">
                                 <li class="team-social-item">
-                                    <a href="" class="team-social-link"></a>
+                                    <a href="" class="team-social-link">
+                                        <svg class="team-social-icon" width="20" hight="20">
+                                            <use href="./images/icons.svg#icon-instagram"></use>
+                                        </svg>
+                                    </a>
                                 </li>
                                 <li class="team-social-item">
-                                    <a href="" class="team-social-link"></a>
+                                    <a href="" class="team-social-link"><svg class="team-social-icon" width="20" hight="20">
+                                            <use href="./images/icons.svg#icon-twitter"></use>
+                                        </svg>
+                                    </a>
                                 </li>
                                 <li class="team-social-item">
-                                    <a href="" class="team-social-link"></a>
+                                    <a href="" class="team-social-link"><svg class="team-social-icon" width="20" hight="20">
+                                            <use href="./images/icons.svg#icon-facebook"></use>
+                                        </svg>
+                                    </a>
                                 </li>
                                 <li class="team-social-item">
-                                    <a href="" class="team-social-link"></a>
+                                    <a href="" class="team-social-link"><svg class="team-social-icon" width="20" hight="20">
+                                            <use href="./images/icons.svg#icon-linkedin"></use>
+                                        </svg>
+                                    </a>
                                 </li>
                             </ul>
                         </li>
+                </ul>
+            </div>
+        </section>
+        <!--Clients-->
+        <section class="clients">
+            <div class="container clients-container">
+                <h2 class="container-title">Постоянные клиенты</h2>
+                <ul class="client-list list">
+                    <li class="client-item">
+                        <a href="" class="client-link">
+                            <svg class="client-icon" width="106" height="60">
+                                <use href="./images/icons.svg#icon-client1"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="client-item">
+                        <a href="" class="client-link">
+                            <svg class="client-icon" width="106" height="60">
+                                <use href="./images/icons.svg#icon-client2"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="client-item">
+                        <a href="" class="client-link">
+                            <svg class="client-icon" width="106" height="60">
+                                <use href="./images/icons.svg#icon-client3"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="client-item">
+                        <a href="" class="client-link">
+                            <svg class="client-icon" width="106" height="60">
+                                <use href="./images/icons.svg#icon-client4"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="client-item">
+                        <a href="" class="client-link">
+                            <svg class="client-icon" width="106" height="60">
+                                <use href="./images/icons.svg#icon-client5"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="client-item">
+                        <a href="" class="client-link">
+                            <svg class="client-icon" width="106" height="60">
+                                <use href="./images/icons.svg#icon-client6"></use>
+                            </svg>
+                        </a>
+                    </li>
                 </ul>
             </div>
         </section>
@@ -173,6 +288,7 @@
         <!--Footer-->
     <footer class="footer">
         <div class="container container-footer">
+            <div class="adress-footer">
                 <a href="" class="logo-link"><span class="logo" lang="en">Web</span><span class="logo2" lang="en">Studio</span></a>
                 <address class="adress">
                     <ul class="adress-list list">
@@ -181,6 +297,40 @@
                         <li class="adress-item"><a href="tel:+380991111111" class="adress-link">+380991111111</a></li>
                     </ul>
                 </address>
+            </div>
+            <div class="join">
+                    <h3 class="join-title">присоединяйтесь</h3>
+                    <ul class="join-list list">
+                        <li class="join-item">
+                            <a href="" class="join-link">
+                                <svg class="join-icon" width="20" height="20">
+                                    <use href="./images/icons.svg#icon-instagram"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="join-item">
+                            <a href="" class="join-link">
+                                <svg class="join-icon" width="20" height="20">
+                                    <use href="./images/icons.svg#icon-twitter"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="join-item">
+                            <a href="" class="join-link">
+                                <svg class="join-icon" width="20" height="20">
+                                    <use href="./images/icons.svg#icon-facebook"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="join-item">
+                            <a href="" class="join-link">
+                                <svg class="join-icon" width="20" height="20">
+                                    <use href="./images/icons.svg#icon-linkedin"></use>
+                                </svg>
+                            </a>
+                        </li>
+                    </ul>
+            </div>
         </div>
     </footer>
 </body>
