--- a/portfolio.html
+++ b/portfolio.html
@@ -25,15 +25,23 @@
                     <li class="nav-item"><a href="" class="nav-link">Контакты</a></li>
                 </ul>
                 <ul class="contacts-list list">
-                    <li class="contacts-item"><a href="mailto:info@devstudio.com" class="contacts-link">info@example.com</a>
+                    <li class="contacts-item">
+                        <svg class="contacts-icon" width="16" height="10">
+                            <use href="./images/icons.svg#icon-envelope"></use>
+                        </svg>
+                        <a href="mailto:info@devstudio.com" class="contacts-link">info@example.com</a>
                     <li>
-                    <li class="contacts-item"><a href="tel:+380991111111" class="contacts-link">+380991111111</a>
+                    <li class="contacts-item">
+                        <svg class="contacts-icon" width="10" height="16">
+                            <use href="./images/icons.svg#icon-smartphone"></use>
+                        </svg>
+                        <a href="tel:+380991111111" class="contacts-link">+380991111111</a>
                     </li>
                 </ul>
             </div>
         </header>
-     <section class="portfolio">
-             <div class="container">
+    <section class="portfolio">
+            <div class="container container-portfolio">
             <h1 class="visually-hidden">Наши работы</h1>
                 <ul class="filtr-list list">
                     <li class="filtr-item"><button class="filtr-button" type="button">Все</button></li>
@@ -112,16 +120,51 @@
     <!--Footer-->
     <footer class="footer">
         <div class="container container-footer">
-            <a href="" class="logo-link"><span class="logo" lang="en">Web</span><span class="logo2"
-                    lang="en">Studio</span></a>
-            <address class="adress">
-                <ul class="adress-list list">
-                    <li class="adress-item1"><a href="" class="adress-link1"> г. Киев, пр-т Леси Украинки, 26</a></li>
-                    <li class="adress-item"><a href="mailto:info@devstudio.com" class="adress-link">info@example.com</a>
+            <div class="adress-footer">
+                <a href="" class="logo-link"><span class="logo" lang="en">Web</span><span class="logo2"
+                        lang="en">Studio</span></a>
+                <address class="adress">
+                    <ul class="adress-list list">
+                        <li class="adress-item1"><a href="" class="adress-link1"> г. Киев, пр-т Леси Украинки, 26</a></li>
+                        <li class="adress-item"><a href="mailto:info@devstudio.com" class="adress-link">info@example.com</a>
+                        </li>
+                        <li class="adress-item"><a href="tel:+380991111111" class="adress-link">+380991111111</a></li>
+                    </ul>
+                </address>
+            </div>
+            <div class="join">
+                <h3 class="join-title">присоединяйтесь</h3>
+                <ul class="join-list list">
+                    <li class="join-item">
+                        <a href="" class="join-link">
+                            <svg class="join-icon" width="20" height="20">
+                                <use href="./images/icons.svg#icon-instagram"></use>
+                            </svg>
+                        </a>
                     </li>
-                    <li class="adress-item"><a href="tel:+380991111111" class="adress-link">+380991111111</a></li>
+                    <li class="join-item">
+                        <a href="" class="join-link">
+                            <svg class="join-icon" width="20" height="20">
+                                <use href="./images/icons.svg#icon-twitter"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="join-item">
+                        <a href="" class="join-link">
+                            <svg class="join-icon" width="20" height="20">
+                                <use href="./images/icons.svg#icon-facebook"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="join-item">
+                        <a href="" class="join-link">
+                            <svg class="join-icon" width="20" height="20">
+                                <use href="./images/icons.svg#icon-linkedin"></use>
+                            </svg>
+                        </a>
+                    </li>
                 </ul>
-            </address>
+            </div>
         </div>
     </footer>
 </body>
