--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <ul class="description-list list">
                     <li class="description-item">
                     <div class="button-client">
-                            <svg class="description-icon" width="70" hight="70">
+                            <svg class="description-icon" width="70" height="70">
                                 <use href="./images/icons.svg#icon-antenna"></use>
                             </svg>
                     </div>
@@ -62,7 +62,7 @@
                     </li>
                     <li class="description-item">
                         <div class="button-client">
-                        <svg class="description-icon" width="70" hight="70">
+                        <svg class="description-icon" width="70" height="70">
                             <use href="./images/icons.svg#icon-clock"></use>
                         </svg></div>
                         <h3 class="description-title">ПУНКТУАЛЬНОСТЬ</h3>
@@ -70,7 +70,7 @@
                     </li>
                     <li class="description-item">
                         <div class="button-client">
-                        <svg class="description-icon" width="70" hight="70">
+                        <svg class="description-icon" width="70" height="70">
                             <use href="./images/icons.svg#icon-diagram"></use>
                         </svg></div>
                         <h3 class="description-title">ПЛАНИРОВАНИЕ</h3>
@@ -78,7 +78,7 @@
                     </li>
                     <li class="description-item">
                         <div class="button-client">
-                        <svg class="description-icon" width="70" hight="70">
+                        <svg class="description-icon" width="70" height="70">
                             <use href="./images/icons.svg#icon-astronaut"></use>
                         </svg></div>
                         <h3 class="description-title">СОВРЕМЕННЫЕ ТЕХНОЛОГИИ</h3>
