Добавила тени при и ховер

--- a/index.html
+++ b/index.html
@@ -19,22 +19,24 @@
                     <ul class="nav-list list">
                         <li class="nav-item"><a href="" class="logo-link"><span class="logo" lang="en">Web</span><span
                                     class="logo1" lang="en">Studio</span></a></li>
-                        <li class="nav-item"><a href="./index.html" class="nav-link">Студия</a></li>
+                        <li class="nav-item"><a href="./index.html" class="nav-link activ">Студия</a></li>
                         <li class="nav-item"><a href="./portfolio.html" class="nav-link">Портфолио</a></li>
                         <li class="nav-item"><a href="" class="nav-link">Контакты</a></li>
                     </ul>
                     <ul class="contacts-list list">
                         <li class="contacts-item">
+                            <a class="contacts-link" href="mailto:info@devstudio.com"></a>
                             <svg class="contacts-icon" width="16" height="10">
                                 <use href="./images/icons.svg#icon-envelope"></use>
                             </svg>
-                            <a href="mailto:info@devstudio.com" class="contacts-link">info@example.com</a>
+                            info@example.com</a>
                         <li>
                         <li class="contacts-item">
+                            <a class="contacts-link" href="tel:+380991111111"></a>
                             <svg class="contacts-icon" width="10" height="16">
                                 <use href="./images/icons.svg#icon-smartphone"></use>
                             </svg>
-                                <a href="tel:+380991111111" class="contacts-link">+380991111111</a>
+                                +380991111111</a>
                         </li> 
                     </ul>
             </div>
@@ -52,7 +54,7 @@
                 <h2 class="visually-hidden">Наши приоритеты</h2>
                 <ul class="description-list list">
                     <li class="description-item">
-                    <div class="button-client">
+                    <div class="icon-client">
                             <svg class="description-icon" width="70" height="70">
                                 <use href="./images/icons.svg#icon-antenna"></use>
                             </svg>
@@ -61,7 +63,7 @@
                         <p class="description-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                     </li>
                     <li class="description-item">
-                        <div class="button-client">
+                        <div class="icon-client">
                         <svg class="description-icon" width="70" height="70">
                             <use href="./images/icons.svg#icon-clock"></use>
                         </svg></div>
@@ -69,7 +71,7 @@
                         <p class="description-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                     </li>
                     <li class="description-item">
-                        <div class="button-client">
+                        <div class="icon-client">
                         <svg class="description-icon" width="70" height="70">
                             <use href="./images/icons.svg#icon-diagram"></use>
                         </svg></div>
@@ -77,7 +79,7 @@
                         <p class="description-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                     </li>
                     <li class="description-item">
-                        <div class="button-client">
+                        <div class="icon-client">
                         <svg class="description-icon" width="70" height="70">
                             <use href="./images/icons.svg#icon-astronaut"></use>
                         </svg></div>
