--- a/portfolio.html
+++ b/portfolio.html
@@ -16,29 +16,31 @@
 <body>
  <!--Navigation-->
         <header class="header">
-            <div class="container container-nav">
-                <ul class="nav-list list">
-                    <li class="nav-item"><a href="" class="logo-link"><span class="logo" lang="en">Web</span><span class="logo1"
-                                lang="en">Studio</span></a></li>
-                    <li class="nav-item"><a href="./index.html" class="nav-link">Студия</a></li>
-                    <li class="nav-item"><a href="./portfolio.html" class="nav-link">Портфолио</a></li>
-                    <li class="nav-item"><a href="" class="nav-link">Контакты</a></li>
-                </ul>
-                <ul class="contacts-list list">
-                    <li class="contacts-item">
-                        <svg class="contacts-icon" width="16" height="10">
-                            <use href="./images/icons.svg#icon-envelope"></use>
-                        </svg>
-                        <a href="mailto:info@devstudio.com" class="contacts-link">info@example.com</a>
-                    <li>
-                    <li class="contacts-item">
-                        <svg class="contacts-icon" width="10" height="16">
-                            <use href="./images/icons.svg#icon-smartphone"></use>
-                        </svg>
-                        <a href="tel:+380991111111" class="contacts-link">+380991111111</a>
-                    </li>
-                </ul>
-            </div>
+        <div class="container container-nav">
+            <ul class="nav-list list">
+                <li class="nav-item"><a href="" class="logo-link"><span class="logo" lang="en">Web</span><span class="logo1"
+                            lang="en">Studio</span></a></li>
+                <li class="nav-item"><a href="./index.html" class="nav-link activ">Студия</a></li>
+                <li class="nav-item"><a href="./portfolio.html" class="nav-link">Портфолио</a></li>
+                <li class="nav-item"><a href="" class="nav-link">Контакты</a></li>
+            </ul>
+            <ul class="contacts-list list">
+                <li class="contacts-item">
+                    <a class="contacts-link" href="mailto:info@devstudio.com"></a>
+                    <svg class="contacts-icon" width="16" height="10">
+                        <use href="./images/icons.svg#icon-envelope"></use>
+                    </svg>
+                    info@example.com</a>
+                <li>
+                <li class="contacts-item">
+                    <a class="contacts-link" href="tel:+380991111111"></a>
+                    <svg class="contacts-icon" width="10" height="16">
+                        <use href="./images/icons.svg#icon-smartphone"></use>
+                    </svg>
+                    +380991111111</a>
+                </li>
+            </ul>
+        </div>
         </header>
     <section class="portfolio">
             <div class="container container-portfolio">
