--- a/portfolio.html
+++ b/portfolio.html
@@ -20,8 +20,8 @@
             <ul class="nav-list list">
                 <li class="nav-item"><a href="" class="logo-link"><span class="logo" lang="en">Web</span><span class="logo1"
                             lang="en">Studio</span></a></li>
-                <li class="nav-item"><a href="./index.html" class="nav-link activ">Студия</a></li>
-                <li class="nav-item"><a href="./portfolio.html" class="nav-link">Портфолио</a></li>
+                <li class="nav-item"><a href="./index.html" class="nav-link">Студия</a></li>
+                <li class="nav-item"><a href="./portfolio.html" class="nav-link activ">Портфолио</a></li>
                 <li class="nav-item"><a href="" class="nav-link">Контакты</a></li>
             </ul>
             <ul class="contacts-list list">
